# rustbandicoot

./: .gitignore  Cargo.toml  README.md  pc_trace.txt  pc_trace_rust.txt
debugger/: Cargo.toml
debugger/src/: app.rs  emulator.rs  main.rs  ui.rs
disassembler/: Cargo.toml
disassembler/src/: disassembler.rs  main.rs
docs/: thinkingoutloud.odt
ps/: Cargo.toml
ps/src/: bios.rs  expansion_region2.rs  lib.rs  main.rs  map.rs  playstation.rs  ram.rs
ps/src/cpu/: cop0.rs  instruction.rs  mipsr3000.rs  mod.rs  utils.rs
ps/src/dma/: channel.rs  mod.rs
ps/src/gpu/: mod.rs
ps/src/irq/: mod.rs
ps/src/spu/: mod.rs
